--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,5 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #4d4d4d;
+    background-color: #E8DAF1;
 }
+
+/*   #73359F */
