--- a/frontend/src/components/UI/LoginButton.module.css
+++ b/frontend/src/components/UI/LoginButton.module.css
@@ -10,4 +10,4 @@ svg g {
     
 }
 
-filter: drop-shadow(0px 0px 300px rgb(255 255 255));
+/* filter: drop-shadow(0px 0px 300px rgb(255 255 255)); */
