--- a/frontend/src/components/Box/Box.module.css
+++ b/frontend/src/components/Box/Box.module.css
@@ -14,4 +14,11 @@
     color: #f5f4e1;
     cursor: pointer;
     z-index: 1;
+
+}
+
+.resizer{
+    width: 100%;
+    height: 100%;
+    background-color: red;
 }
