--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,6 +5,8 @@
 
 }
 body{
-    background-color: #353535;
+    background-color: #eeeeee;
+    background: rgb(245,225,175);
+    background: linear-gradient(90deg, rgba(245,225,175,1) 0%, rgba(255,255,255,1) 100%);
 }
 /*   #73359F */
