--- a/frontend/src/components/Box/Box.module.css
+++ b/frontend/src/components/Box/Box.module.css
@@ -4,21 +4,59 @@
     left: 0;
     width: 350px;
     height: 350px;
-    background-color: #313131;
+    min-width: 15px;
+    min-height: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fffdf5;
     border-radius: 10px;
     opacity:1;
-    border: 1px solid rgb(40, 39, 39);
-    box-shadow: 3px 20px 50px 3px #21454a;
+    border: 1px solid rgb(255, 255, 255);
+    box-shadow: 3px 10px 20px 3px #463601;
     padding: 5px;
-    padding-left: 10px;
     color: #f5f4e1;
     cursor: pointer;
     z-index: 1;
+    
 
+}
+.resizeable-box{
+    background-color: red;
 }
 
 .resizer{
-    width: 100%;
+    position: absolute;
+    background: rgb(240, 202, 202);
+    z-index: 1000;
+}
+.rr{
+    cursor: col-resize;
     height: 100%;
-    background-color: red;
+    right: 0;
+    top: 0;
+    width: 5px;
+}
+
+.rt{
+    cursor: row-resize;
+    height: 5px;
+    width: 100%;
+    top: 0;
+    left: 0;
+
+}
+.rb{
+    cursor: row-resize;
+    height: 5px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+.rl{
+    cursor: col-resize;
+    height: 100%;
+    left: 0;
+    top: 0;
+    width: 5px;
 }
