--- a/frontend/src/components/Box/Box.module.css
+++ b/frontend/src/components/Box/Box.module.css
@@ -12,7 +12,7 @@
     background-color: #fffdf5;
     border-radius: 10px;
     opacity:1;
-    border: 1px solid rgb(255, 255, 255);
+    border: 1px solid rgb(132, 124, 78);
     box-shadow: 3px 10px 20px 3px #463601;
     padding: 5px;
     color: #f5f4e1;
@@ -27,36 +27,36 @@
 
 .resizer{
     position: absolute;
-    background: rgb(240, 202, 202);
+    background: transparent;
     z-index: 1000;
 }
 .rr{
     cursor: col-resize;
     height: 100%;
-    right: 0;
+    right: -2px;
     top: 0;
-    width: 5px;
+    width: 4px;
 }
 
 .rt{
     cursor: row-resize;
-    height: 5px;
+    height: 4px;
     width: 100%;
-    top: 0;
+    top: -2px;
     left: 0;
 
 }
 .rb{
     cursor: row-resize;
-    height: 5px;
+    height: 4px;
     left: 0;
-    bottom: 0;
+    bottom: -2px;
     width: 100%;
 }
 .rl{
     cursor: col-resize;
     height: 100%;
-    left: 0;
+    left: -2px;
     top: 0;
-    width: 5px;
+    width: 4px;
 }
